@@ -1921,7 +1921,10 @@ char *G_SHA1( char *string );
 //
 // pheno: g_shoutcaster.c
 //
+qboolean G_IsShoutcastPasswordSet( void );
 qboolean G_IsShoutcastStatusAvailable( gentity_t *ent );
+void G_MakeShoutcaster( gentity_t *ent );
+void G_RemoveShoutcaster( gentity_t *ent );
 void G_RemoveAllShoutcasters( void );
 void G_sclogin_cmd( gentity_t *ent, unsigned int dwCommand, qboolean fValue );
 void G_sclogout_cmd( gentity_t *ent, unsigned int dwCommand, qboolean fValue );
@@ -3179,6 +3182,9 @@ void G_MakeReferee(void);
 void G_RemoveReferee(void);
 void G_MuteClient(void);
 void G_UnMuteClient(void);
+// pheno: shoutcaster - referee commands
+void G_refMakeShoutcaster_cmd( gentity_t *ent );
+void G_refRemoveShoutcaster_cmd( gentity_t *ent );
 
 
 
