@@ -32,6 +32,11 @@ qboolean G_refCommandCheck(gentity_t *ent, char *cmd)
 	// yada - handled by the vote functions now
 	//else if(!Q_stricmp(cmd, "mute"))		G_refMute_cmd(ent, qtrue); 
 	//else if(!Q_stricmp(cmd, "unmute"))		G_refMute_cmd(ent, qfalse);
+	// pheno: shoutcaster - referee commands
+	else if( !Q_stricmp( cmd, "makeshoutcaster" ) )
+		G_refMakeShoutcaster_cmd( ent );
+	else if( !Q_stricmp( cmd, "removeshoutcaster" ) )
+		G_refRemoveShoutcaster_cmd( ent );
 	else return(qfalse);
 
 	return(qtrue);
@@ -90,11 +95,12 @@ void G_refHelp_cmd(gentity_t *ent)
 	G_voteHelp(ent, qfalse);
 	// CHRUKER: b038 - Removed non-existing restart command
 	// CHRUKER: b039 - Added <pid> parameter to remove command
-	G_refPrintf(ent,"^5allready         putallies^7 <pid>  ^5speclock          warmup");
-	G_refPrintf(ent,"^5lock             putaxis^7 <pid>    ^5specunlock        warn ^7<pid>");
-	G_refPrintf(ent,"^5help             remove^7 <pid>     ^5unlock            pause");
-	G_refPrintf(ent,"^5unpause");
-
+	G_refPrintf(ent,"^5allready         putallies^7 <pid>  ^5speclock         warmup");
+	G_refPrintf(ent,"^5lock             putaxis^7 <pid>    ^5makeshoutcaster^7 <pid>");
+	G_refPrintf(ent,"^5help             remove^7 <pid>     ^5removeshoutcaster^7 <pid>");
+	G_refPrintf(ent,"^5unlock           warn ^7<pid>       ^5pause            unpause");
+	G_refPrintf(ent,"^5specunlock");
+	G_refPrintf(ent,"------------------------------------------");
 	G_refPrintf(ent,"Usage: ^3\\ref <cmd> [params]\n");
 }
 		
@@ -453,6 +459,98 @@ void G_refWarning_cmd(gentity_t* ent)
 		ClientUserinfoChanged( pid );
 	}
 }*/
+
+/*
+================
+G_refMakeShoutcaster_cmd
+================
+*/
+void G_refMakeShoutcaster_cmd( gentity_t *ent )
+{
+	int			pid;
+	char		name[MAX_NAME_LENGTH];
+	gentity_t	*player;
+
+	if( trap_Argc() != 3 ) {
+		G_refPrintf( ent, "Usage: \\ref makeshoutcaster <pid>" );
+		return;
+	}
+
+	if( !G_IsShoutcastPasswordSet() ) {
+		G_refPrintf( ent,
+			"Sorry, shoutcaster status disabled on this server." );
+		return;
+	}
+
+	trap_Argv( 2, name, sizeof( name ) );
+	
+	if( ( pid = ClientNumberFromString( ent, name ) ) == -1 ) {
+		return;
+	}
+
+	player = g_entities + pid;
+
+	if( !player || !player->client ) {
+		return;
+	}
+
+	// ignore bots
+	if( player->r.svFlags & SVF_BOT ) {
+		G_refPrintf( ent, "Sorry, a bot can not be a shoutcaster." );
+		return;
+	}
+
+	if( player->client->sess.shoutcaster ) {
+		G_refPrintf( ent, "Sorry, %s^7 is already a shoutcaster.",
+			player->client->pers.netname );
+		return;
+	}
+
+	G_MakeShoutcaster( player );
+}
+
+/*
+================
+G_refRemoveShoutcaster_cmd
+================
+*/
+void G_refRemoveShoutcaster_cmd( gentity_t *ent )
+{
+	int			pid;
+	char		name[MAX_NAME_LENGTH];
+	gentity_t	*player;
+
+	if( trap_Argc() != 3 ) {
+		G_refPrintf( ent, "Usage: \\ref removeshoutcaster <pid>" );
+		return;
+	}
+
+	if( !G_IsShoutcastPasswordSet() ) {
+		G_refPrintf( ent,
+			"Sorry, shoutcaster status disabled on this server." );
+		return;
+	}
+
+	trap_Argv( 2, name, sizeof( name ) );
+	
+	if( ( pid = ClientNumberFromString( ent, name ) ) == -1 ) {
+		return;
+	}
+
+	player = g_entities + pid;
+
+	if( !player || !player->client ) {
+		return;
+	}
+
+	if( !player->client->sess.shoutcaster ) {
+		G_refPrintf( ent, "Sorry, %s^7 is not a shoutcaster.",
+			player->client->pers.netname );
+		return;
+	}
+
+	G_RemoveShoutcaster( player );
+}
 
 //////////////////////////////
 //  Client authentication
